# yolo_plugin

./: CMakeLists.txt  inference.cpp  inference.h  main.cpp
plugin/: CMakeLists.txt  video_plugin.h  yolo_plugin.cpp
